[tool.poetry]
name = "pizza"
version = "0.1.0"
description = "PIZZA"
authors = ["Nwolu David"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
sqlmodel = "^0.0.16"
werkzeug = "^3.0.2"
fastapi-jwt-auth = "^0.5.0"
fastapi-jwt = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
